MTA/build/spark-pod.yaml
apiVersion: v1
kind: Pod
metadata:
  name: spark-pod
  namespace: default
  labels:
    app: spark-pod
spec:
  serviceAccountName: spark-sa
  containers:
    - name: spark-container
      image: mattdunn022/spark-base-py:latest
      imagePullPolicy: Always #"IfNotPresent"
      command: ["bash", "-c", "while true; do echo 1; sleep 1; done"]
      ports:
        - containerPort: 7077
        - containerPort: 8080
