MTA/build/postgres.yml
apiVersion: v1
kind: Namespace
metadata:
  name: postgres
  labels:
    name: postgres
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: postgres
  namespace: postgres
spec:
  replicas: 1
  selector:
    matchLabels:
      app: postgres
  template:
    metadata:
      labels:
        app: postgres
    spec:
      containers:
        - name: postgres
          image: postgres:10.1
          imagePullPolicy: "IfNotPresent"
          lifecycle:
            postStart:
              exec:
                command: ["/bin/bash", "-c", /opt/init_database.sh]
          resources:
            limits:
              memory: 5Gi
              cpu: "2"
            requests:
              memory: 1Gi
              cpu: "0.25"
          ports:
            - containerPort: 5432  # Exposing the container port 5432 for PostgreSQL client connections.
          volumeMounts:
            - name: postgredb
              mountPath: /var/lib/postgresql/data
            - name: shell
              mountPath: /opt/init_database.sh
              subPath: init_database.sh
            - name: sql
              mountPath: /opt/database_setup.sql
              subPath: database_setup.sql
      volumes:
        - name: postgredb
          persistentVolumeClaim:
            claimName: postgres-pvc
        - name: shell
          configMap:
            name: postgres-config
            defaultMode: 493 #0755 is octal equivilent
        - name: sql
          configMap:
            name: postgres-config
---
apiVersion: v1
kind: Service
metadata:
  name: postgres-service
  namespace: postgres
  labels:
    app: postgres
spec:
  type: NodePort 
  ports:
    - port: 5432 
      nodePort: 30007
  selector:
    app: postgres
