MTA/build/postgres-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: postgres-ingress
  annotations:
    postgres.ingress.kubernetes.io/rewrite-target: /
spec:
  ingressClassName: postgres-example
  rules:
  - http:
      paths:
      - path: /database
        pathType: Prefix
        backend:
          service:
            name: postgres
            port:
              number: 31653
